src/test/deca/syntax/invalid/invalid_identifier.deca
// Description :
//    Nom de l'identificateur invalide
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'int'

int 1abc = 5;
